# cmake version 3.10.2

# For Library
# CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)
# PROJECT(ShuanglongServer)
# FILE(GLOB SRC_LIST_CPP ${PROJECT_SOURCE_DIR}/src/*.cpp)
# FILE(GLOB SRC_LIST_C ${PROJECT_SOURCE_DIR}/src/*.c)
# INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
# SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
# ADD_LIBRARY(myprint SHARED ${SRC_LIST_CPP} ${SRC_LIST_C})

# For Executable
CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)

PROJECT(ShuanglongServer)

SET(SOURCE_DIR ${PROJECT_SOURCE_DIR}/src/*.cpp)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

ADD_EXECUTABLE(ShuanglongServer ${SOURCE_DIR})

# TARGET_LINK_LIBRARIES(hello libname)

