# cmake version 3.10.2

# For Library
# CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)
# PROJECT(ShuanglongServer)
# FILE(GLOB SRC_LIST_CPP ${PROJECT_SOURCE_DIR}/src/*.cpp)
# FILE(GLOB SRC_LIST_C ${PROJECT_SOURCE_DIR}/src/*.c)
# INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
# SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
# ADD_LIBRARY(myprint SHARED ${SRC_LIST_CPP} ${SRC_LIST_C})

# For Executable
CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)

PROJECT(ShuanglongServer)

SET(SRC_DIR ${PROJECT_SOURCE_DIR}/src)

MESSAGE(STATUS "PROJECT_SOURCE_DIR" ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "SRC_DIR" ${SRC_DIR})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(${SRC_DIR}/utils)

ADD_EXECUTABLE(${PROJECT_NAME}.out ${SRC_DIR}/main.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}.out utils)

